--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
 <meta lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="مركزية.css" type="text/css">
 <link rel="stylesheet" type="text/css" href="index.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
-  <div class="sid">
-  <div class="top">
-
-  <h2 class="topname" style="text-align: left;">شركة  نفط البصرة <a href="#" onclick="window.history.back(); return false;" style="margin-right: 7%;"><button class="btn"><i class="fa fa-home"></i> Home</button></a></h2>
-
+  <div  class="sid">
+    <div class="top" >
   
-<br>
-<img src="بصرة.jpg" style="width: 55%; border-radius: 50%; border: none;">
-</div><br>
-  <button style="text-align: center;background-color: cadetblue;border-radius: 15%;padding: 5px;margin: 5px;"  class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Fade')"><p>نتائج الدورات 2024</p></button>
-  <button style="text-align: center;background-color: cadetblue;border-radius: 15%;padding: 5px;margin: 5px;" class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Zoom')"><p>نتائج الدورات الاخرى</p></button>
+      <a href="https://sarahhamoud.github.io/win/" ><button class="btn" style="background-color: inherit;">Home<i class="fa fa-home" style="font-size:26px"></i> </button></a>
+  </div>
+      <br><div>
+     <img src="بصرة.jpg" style="width: 50%; border-radius: 50%;border: none;background-color: inherit;">
+     <h4  style="text-align: center;">شركة نفط البصرة</h4>
+  </div><br>
+  <button style="text-align: center;background-color: rgb(70, 153, 176);border-radius: 15%;padding: 5px;margin: 5px;"  class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Fade')"><p>نتائج الدورات 2024</p></button>
+  <button style="text-align: center;background-color: rgb(70, 153, 176);border-radius: 15%;padding: 5px;margin: 5px;" class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Zoom')"><p>نتائج الدورات الاخرى</p></button>
+
 
 <br>
-<hr style="color: cadetblue;border: 3px solid; width: 100%;">
- 
+<hr style="color: rgb(70, 153, 176);border: 3px solid; width: 100%;">
 </div>
 
 <div>
- 
+  
   <div id="Fade" class="w3-container city w3-animate-opacity" style="display:none">
     <div class="top">
          <h3 style="text-align: center;">نتائج دورات شركة نفط البصرة</h3>
