--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
   
       <a href="https://sarahhamoud.github.io/win/" ><button class="btn" style="background-color: inherit;">Home<i class="fa fa-home" style="font-size:26px"></i> </button></a>
   </div>
-      <br><div>
+      <div>
      <img src="بصرة.jpg" style="width: 50%; border-radius: 50%;border: none;background-color: inherit;">
      <h4  style="text-align: center;">شركة نفط البصرة</h4>
-  </div><br>
+  </div>
   <button style="text-align: center;background-color: rgb(70, 153, 176);border-radius: 15%;padding: 5px;margin: 5px;"  class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Fade')"><p>نتائج الدورات 2024</p></button>
   <button style="text-align: center;background-color: rgb(70, 153, 176);border-radius: 15%;padding: 5px;margin: 5px;" class="w3-bar-item w3-button tablink" onclick="openLink(event, 'Zoom')"><p>نتائج الدورات الاخرى</p></button>
 
 
-<br>
-<hr style="color: rgb(70, 153, 176);border: 3px solid; width: 100%;">
+
 </div>
 
 <div>
